# HpCli

./: CLAUDE.md  Cargo.toml  README.md  outputfile
src/: args.rs  cliapp.rs  cmd_handler.rs  commands.rs  credentials.rs  file_handler.rs  file_helper.rs  hash_helper.rs  main.rs  rand_generator.rs  string_handler.rs
src/cryptography/: algorithm.rs  common.rs  encryption.rs  file_decryption.rs  file_encryption.rs  hash_algorithm.rs  hash_helper.rs  hashing.rs  jwt_keygen.rs  mod.rs
src/files/: mod.rs
src/strings/: mod.rs
tests/: file_helper.rs  file_helper_test.rs  hash_helper_test.rs
