[package]
name = "HpCli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.21", features = ["cargo", "derive"] }
crypto = "0.5.1"
sha2 = "0.10.8"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
md5 = "0.7.0"
rand = "0.8.5"
tempfile = "3.14.0"
orion = "0.17.7"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rsa = "0.8.0"
base64 = "0.22.1"
hex = "0.4.3"
base64ct = "=1.6.0"
